--- a/portfolio.html
+++ b/portfolio.html
@@ -226,6 +226,20 @@
                         </li>
                     </ul>
                 </div>
+                <div class="mailing-block">.
+                    <!-- <p class="mailing-action">подпишитесь на рассылку</p> -->
+                    <form action="#" class="mailing" autocomplete="off">
+                        <span class="mailing-label">подпишитесь на рассылку</span>
+                        <div class="form-mailing-wrapper">
+                            <input type="email" placeholder="E-mail">
+                            <button type="submit" class="mailing-button">подписаться
+                                <svg class="icon" width="24" height="24">
+                                    <use href="./images/forms/symbol-defs.svg#icon-icon-send"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
