--- a/index.html
+++ b/index.html
@@ -431,11 +431,10 @@
                         <textarea id="comments" rows="6" placeholder="Введите текст"></textarea>
                     </li>
                     <li class="form-item deal">
-                        <label class="form-agree">
-                            <input type="checkbox" name="checkbox"/>
-                            <span class="icon"></span>
-                            Соглашаюсь с рассылкой и принимаю 
-                            <a href="#" class="agree-link">Условия договора</a>
+                        <input type="checkbox" name="checkbox" id="agree" class="checkbox"/>
+                        <label for="agree" class="form-agree">
+                        Соглашаюсь с рассылкой и принимаю 
+                        <a href="#" class="agree-link">Условия договора</a>
                         </label>
                     </li>
                 </ul>
